# ragdol

./: .clang-format  .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  README.md  compile_commands.json  main.cpp
src/: main.cpp
src/core/: constants.h
src/interpreter/: ast.cpp  ast.h  ast_nodes.h  ast_visitor.h  function.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  parser.cpp  parser.h  scope.cpp  scope.h  token.cpp  token.h  types.h  value.cpp  value.h
src/sys/: graphics.cpp  graphics.h  input.cpp  input.h  system.cpp  system.h
test/: fib.rd  main.rd  strings.rd  test1.rd  test_assignment.rd  test_basic_flow.rd  test_comparisons.rd  test_conditions.rd  test_control_flow.rd  test_elseif.rd  test_fn_return.rd  test_fnargs_scope.rd  test_functionargs.rd  test_game.rd  test_nested.rd  test_shortcircuit.rd  test_while.rd
tools/: convert_png_to_data.py
